Changed "Collaboration" placement
Collaboration section has been removed and the content has been moved to
the Contact Us section

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,12 @@ hr.light {
 	border-color: white;
 }
 
+hr.footer-hr{
+  align:left;
+  border-color: white;
+  max-width: 100%;
+}
+
 a {
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
