--- a/css/jquery.fullPage.css
+++ b/css/jquery.fullPage.css
@@ -79,8 +79,7 @@ html.fp-enabled,
 }
 .fp-controlArrow.fp-prev {
     left: 15px;
-    width: 0;
-    border-width: 38.5px 34px 38.5px 0;
+    border-width: 38.5px 0 38.5px 34px;
     border-color: transparent #fff transparent transparent;
 }
 .fp-controlArrow.fp-next {
