--- a/p2/css/examples.css
+++ b/p2/css/examples.css
@@ -103,11 +103,12 @@ p{
 	position:fixed;
 	top:0;
 	left:0;
-	height: 40px;
+	height: 80px;
 	z-index: 70;
 	width: 100%;
 	padding: 0;
 	margin:0;
+	font-size: 20px;
 }
 .twitter-share-button{
 	position: fixed;
