--- a/p2/css/style.css
+++ b/p2/css/style.css
@@ -158,6 +158,7 @@ header .header-content .header-content-inner p {
   border-radius: 300px;
   font-weight: 700;
   text-transform: uppercase;
+  font-size: 30px;
 }
 .btn-xl {
   padding: 15px 30px;
@@ -412,6 +413,7 @@ figcaption{
 
 .info-card h3{
   color: #008080;
+  margin-top: 0;
 }
 
 .info-card p{
@@ -467,4 +469,25 @@ tbody tr td{
 }
 nav-tab{
   color: #fff;
+}
+dl{
+  margin-top: 5px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+dt{
+  color: #008080;
+  font-size: 2.5vmin;
+  margin-top: 10px;
+  margin-bottom: 0px;
+}
+dt font{
+  margin-bottom: 0em;
+  font-color: #008080;
+}
+dd{
+  font-size: 2vmin;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  color: #008080;
 }
